# kernelport

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.helion  Dockerfile.helion.mock  Dockerfile.luxtts  Makefile  README.md  docker-compose.luxtts.yml  docker-compose.mock.yml  docker-compose.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  deploy-lambda.yml  teardown-lambda.yml
crates/kernelport-backend-helion/: Cargo.toml
crates/kernelport-backend-helion/src/: lib.rs
crates/kernelport-backend-helion/tests/: smoke.rs
crates/kernelport-backend-ort/: Cargo.toml
crates/kernelport-backend-ort/src/: lib.rs
crates/kernelport-backend-ort/tests/: identity.rs
crates/kernelport-core/: Cargo.toml
crates/kernelport-core/src/: artifact.rs  backend.rs  lib.rs  spec.rs  tensor.rs
crates/kernelport-proto/: Cargo.toml  build.rs
crates/kernelport-proto/src/: inference.proto  lib.rs
crates/kernelport-runtime/: Cargo.toml
crates/kernelport-runtime/src/: batcher.rs  lib.rs  request.rs  scheduler.rs  worker.rs  worker_model.rs
crates/kernelport-server/: Cargo.toml
crates/kernelport-server/src/: cli.rs  grpc.rs  main.rs  registry.rs
crates/kernelport-server/tests/: smoke.rs
deployments/: deployments.yaml
docs/: architecture.mmd  deployments.md  model-ingestion.md  model-manifest.md  validation.md  worker_gpu.mmd
docs/deploy/: filesystem-support-plan.md  helion-sidecar.yaml
models/: luxtts-manifest.yaml  sample-manifest.yaml
models/sample/: README.md
scripts/: entrypoint.sh  manifest_to_serve_args.py  model_fetch.py
scripts/helion/: README.md  helion_worker.py
scripts/helion/mock/: helion_worker_mock.py
scripts/luxtts/: luxtts_worker.py  proto_util.py
tests/: test_manifest_serve_args.py
